# calculator

./: .travis.yml  conanfile.py  win_profile
src/: CMakeLists.txt  main.cpp
src/algebric/: CMakeLists.txt
src/algebric/include/: cos.h  sin.h
src/algebric/src/: cos.cpp  sin.cpp
src/arithmetic/: CMakeLists.txt
src/arithmetic/include/: divide.h  multiply.h
src/arithmetic/src/: divide.cpp  multiply.cpp  sub.cpp
src/logrithm/: CMakeLists.txt
src/logrithm/include/: log.h
src/logrithm/src/: log.cpp
